[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-resource-rl-env"
version = "0.1.0"
description = "RL environment for cloud resource allocation"
authors = [
    { name = "Gagan Ahlawat", email = "gagan.devvv@gmail.com" }
]
dependencies = [
    "numpy",
    "gradio",
    "matplotlib",
    "fastapi",
    "uvicorn",
    "pydantic",
    "torch",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"